# forge

./: README.md  health-check.js  package-lock.json  package.json  setup.sh  validate-installation.js
app/: layout.tsx  page.tsx
crates/forge-runtime/: Cargo.toml  README.md
crates/forge-runtime/src/: lib.rs
docs/: COMMANDS.md  README.md
docs/architecture/: overview.md
docs/guides/: getting-started.md  troubleshooting.md
programs/: Anchor.toml
programs/claude-aaas-factory/: Cargo.toml
programs/claude-aaas-factory/src/: lib.rs
src/: cli.ts  cpi.ts  sdk-generator-v2.ts  sdk-generator.ts
src/commands/: agent.ts  audit.ts  deploy.ts  generate-sdk.ts  init.ts  status.ts
test-ata/: Anchor.toml
test-ata/programs/test-ata/: Cargo.toml
test-cpi/: Anchor.toml
test-cpi-intent/: Anchor.toml
test-cpi-intent/programs/test-cpi-intent/: Cargo.toml
test-cpi/programs/test-cpi/: Cargo.toml
test-final-cpi/: Anchor.toml
test-final-cpi/programs/test-final-cpi/: Cargo.toml
test-final-mint/: Anchor.toml
test-final-mint/programs/test-final-mint/: Cargo.toml
test-metadata/: Anchor.toml
test-metadata/programs/test-metadata/: Cargo.toml
test-metadata/programs/test-metadata/src/: lib.rs
test-mint-modern/: Anchor.toml
test-mint-modern/programs/test-mint-modern/: Cargo.toml
test-modern-cpi/: Anchor.toml
test-modern-cpi/programs/test-modern-cpi/: Cargo.toml
test-sdk/: Anchor.toml
test-sdk/client/: idl.ts  index.ts  package.json  tsconfig.json
test-sdk/programs/test-sdk/: Cargo.toml
test1/programs/test1/: Cargo.toml
test2/: Anchor.toml
(+10 files in other folders)
