[package]
name = "forge-runtime"
version = "0.1.0"
edition = "2021"
description = "Thin, brutal Solana runtime for FORGE"
license = "MIT"
repository = "https://github.com/forge-protocol/forge-protocol"
keywords = ["solana", "blockchain", "runtime", "forge"]
categories = ["api-bindings", "command-line-utilities"]

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.0"